Fix GPUTestConfigTest.LoadCurrentConfig on macOS Sierra.

The test needs to be updated each time Chrome begins to support a new macOS
version.

BUG=629708
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2172693002
Cr-Commit-Position: refs/heads/master@{#406971}

Former-commit-id: af3ffdd21e5d85844ca1154d26431eff24ec7cf9