gpu/config/gpu_test_expectations_parser.cc
@@ -43,6 +43,7 @@ enum Token {
   kConfigMacMavericks,
   kConfigMacYosemite,
   kConfigMacElCapitan,
+  kConfigMacSierra,
   kConfigMac,
   kConfigLinux,
   kConfigChromeOS,
@@ -97,6 +98,7 @@ const TokenInfo kTokenData[] = {
     {"mavericks", GPUTestConfig::kOsMacMavericks},
     {"yosemite", GPUTestConfig::kOsMacYosemite},
     {"elcapitan", GPUTestConfig::kOsMacElCapitan},
+    {"sierra", GPUTestConfig::kOsMacSierra},
     {"mac", GPUTestConfig::kOsMac},
     {"linux", GPUTestConfig::kOsLinux},
     {"chromeos", GPUTestConfig::kOsChromeOS},
@@ -259,6 +261,7 @@ bool GPUTestExpectationsParser::ParseConfig(
       case kConfigMacMavericks:
       case kConfigMacYosemite:
       case kConfigMacElCapitan:
+      case kConfigMacSierra:
       case kConfigMac:
       case kConfigLinux:
       case kConfigChromeOS:
@@ -318,6 +321,7 @@ bool GPUTestExpectationsParser::ParseLine(
       case kConfigMacMavericks:
       case kConfigMacYosemite:
       case kConfigMacElCapitan:
+      case kConfigMacSierra:
       case kConfigMac:
       case kConfigLinux:
       case kConfigChromeOS:
@@ -440,6 +444,7 @@ bool GPUTestExpectationsParser::UpdateTestConfig(GPUTestConfig* config,
     case kConfigMacMavericks:
     case kConfigMacYosemite:
     case kConfigMacElCapitan:
+    case kConfigMacSierra:
     case kConfigMac:
     case kConfigLinux:
     case kConfigChromeOS:
